tests/compile_fail/debug/unknown_attribute.stderr
error: unknown attribute argument, expected `bound(...)`
 --> tests/compile_fail/debug/unknown_attribute.rs:2:9
  |
2 | #[debug(unknown = "unknown")]
  |         ^^^^^^^
